##Text encoding: utf-8

2016-03-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: add a new position property for double bond display.
	* libs/gcp/bond.h: ditto.
	* libs/gcp/text.cc: add access to the interline property.
	* libs/gcp/theme.cc: add support for PANGO_WEIGHT_SEMILIGHT.
	* libs/gcu/objprops.h: new position property for double bond display.
	* plugins/loaders/cdx/cdx.cc: enhance imoport and export.

2016-03-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/atom.h: fix documentation.
	* libs/gcu/molecule.cc: don't crash when analysing "Ac" formula. [#47366]
	* programs/calc/gchemcalc.cc: ditto.

2016-03-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: add support for atoms text and font export to CDX 
	format.
	* libs/gcp/atom.h: ditto.
	* libs/gcu/objprops.h: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.

2016-03-03  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fix reading of text with empty runs and avoid
	writing such weird objects. [see sr#108952 comments #25-27]

2016-02-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/*/*.desktop.in.in: add a comment for translators.
	* schemas/org.gnome.gchemutils.gschema.xml.in.in: fixed a key description.

2016-02-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.cc: enhance reaction import/export to CDX format.
	* libs/gcp/arrow.h: ditto.
	* libs/gcp/mesomer.cc: ditto.
	* libs/gcp/reactant.cc: ditto.
	* libs/gcp/reactant.h: ditto.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcp/reaction-arrow.h: ditto.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.
	* libs/gcu/object.h: fix documentation.
	* plugins/loaders/cdx/cdx.cc: enhance reaction import/export.

2016-02-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.h: typo.
	* libs/gcp/mesomer.cc: add a property to set/get the child molecule.
	* libs/gcp/mesomer.h: ditto.
	* libs/gcp/reaction-arrow.h: typo.